[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/MinimalScriptingInterface.gd" type="Script" id=1]
[ext_resource path="res://interface/BNumberConstantEditingInterface.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/BNumberPropertySelector.tscn" type="PackedScene" id=3]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BNumberConstantEditor" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 1366.0
margin_bottom = 736.0
rect_min_size = Vector2( 0, 45 )

[node name="BNumberPointerEditor" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_right = 1366.0
margin_bottom = 736.0
rect_min_size = Vector2( 0, 32 )

[node name="ErrorMessage" type="Label" parent="."]
margin_top = 361.0
margin_right = 1366.0
margin_bottom = 375.0

[connection signal="bnumber_value_changed" from="BNumberConstantEditor" to="." method="_on_BNumberConstantEditor_bnumber_value_changed"]
[connection signal="bnumber_property_selected" from="BNumberPointerEditor" to="." method="_on_BNumberPointerEditor_bnumber_property_selected"]
